alura/alura/infraestrutura-codigo-maquinas-aws-ansible-terraform/security-group.tf
resource "aws_security_group" "webapp" {
  name        = "webapp"
  description = "Allow webapp"

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.cdirs_acesso_remoto
  }
  ingress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = var.cdirs_acesso_remoto
  }
  ingress {
    from_port   = 8080
    protocol    = "TCP"
    to_port     = 8080
    cidr_blocks = var.cdirs_acesso_remoto
  }

  ingress {
    from_port   = 8000
    protocol    = "TCP"
    to_port     = 8000
    cidr_blocks = var.cdirs_acesso_remoto
  }
  ingress {
    from_port   = 443
    protocol    = "TCP"
    to_port     = 443
    cidr_blocks = var.cdirs_acesso_remoto
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web1"
  }
}
